--- a/src/sass/components/_site-footer.scss
+++ b/src/sass/components/_site-footer.scss
@@ -17,6 +17,7 @@
   
   .footer-border {
     border-bottom: 1px solid $hr-color;
+    min-width: 65vw;
   }
 
   small {
